# gert

./: .aider.conf.yml  .gitignore  .pre-commit-config.yaml  GEMINI.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/developers/: architecture.md  coding_rules.md  design_rules.md  enif_implementation_4_ai.md  es_update_implementation_4_ai.md  example_guidelines.md  interfaces.md  legacy_behavior.md  monitoring.md  monitoring_views.md  parameter_lifecycle.md  plotting.md  repo_context.md  roadmap.md  robustification.md  service_discovery.md  test_strategy.md  update_algorithms.md  web_gui_architecture.md
examples/ert_poly/: README.md  experiment.json  generate_experiment.py  poly_eval.py
examples/ert_poly_localized/: README.md  experiment.json  generate_experiment.py  poly_eval.py
examples/many_iterations/: README.md  experiment.json  fast_polynomial.py
examples/many_steps_many_iterations/: README.md  experiment.json  stepper.py
examples/semi_realistic/: README.md  experiment.json  field_model.py  generate_prior.py  observations.json  prior_field.parquet  setup_observations.py  truth_field.parquet
examples/simple/: README.md  experiment.json  simple_polynomial.py
examples/slow/: experiment.json  slow_polynomial.py
examples/slow_triple_enif/: README.md  experiment.json  slow_polynomial.py
examples/triple_enif/: README.md  experiment.json  simple_polynomial.py
skills/gert-architect/: SKILL.md
skills/gert-enif-expert/: SKILL.md
skills/gert-es-expert/: SKILL.md
skills/gert-gui-designer/: SKILL.md
skills/gert-tui-developer/: SKILL.md
src/gert/: __main__.py  discovery.py  monitor.py  plotter.py
src/gert/experiment_runner/: experiment_orchestrator.py  job_submitter.py  realization_workdir_manager.py
src/gert/experiments/: __init__.py  models.py
src/gert/plugins/: __init__.py  enif_update.py  es_update.py  forward_model_client.py  plugins.py  registration.py
src/gert/server/: gert_server.py  models.py  monitoring.py  router.py
src/gert/server/static/: experiments.html  index.html
src/gert/server/static/_app/: env.js  version.json
src/gert/server/static/_app/immutable/assets/: 0.BidOte6S.css  0.CNfBhjAB.css  0.aYU0TUUE.css  4.B8gx2nup.css
src/gert/server/static/_app/immutable/chunks/: BAygdAZH.js  BWtkO9cW.js  BZIAi_YT.js  BgUy-a58.js  Bj3XFqat.js  BjlELEH7.js  C3upeMJX.js  C912nqmm.js  CFKVnMbq.js  CbbcbQWh.js  DBTG2_KR.js  DD5s5CVX.js  DQN4sbCR.js  PO0h6xvg.js  jn6A_lVd.js  uIhhVjLi.js
src/gert/server/static/_app/immutable/entry/: app.B7rPC3Fb.js  app.C0L4xdEF.js  app.DxrMPe-K.js  app.aOm3UXqU.js  start.BgzncIfO.js  start.CHF8sdlC.js  start.ClC7TzCp.js  start.CmOU6iqH.js
src/gert/server/static/_app/immutable/nodes/: 0.DHZm7gmb.js  0.DaI2shk7.js  1.BIPPyCtF.js  1.BNYbxdES.js  1.CKJMj6cl.js  1.ZZQeHAhZ.js  2.B7g3Oqn9.js  2.smPIjGv3.js  3.BIWlZKlD.js  3.BUK08bUy.js  3.DTznvRD8.js  4.BCgMlaAh.js  4.C3Cr7Ws_.js  4.CY8HieBl.js  4.DWJtUTTV.js  5.DLe73qPI.js  5.DnnMM-c2.js  5.Qz_iXIEs.js  5.UBliM11L.js
src/gert/storage/: api.py  consolidation.py  ingestion.py  query.py
src/gert/updates/: base.py  spatial.py
svelte_gui/: README.md  biome.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
svelte_gui/src/: app.html
svelte_gui/src/lib/api/: client.ts
svelte_gui/src/lib/components/: VirtualizedTerminal.svelte
svelte_gui/src/lib/components/dashboard/: AnalysisDashboard.svelte  EnsemblesSidebar.svelte  ExperimentSummaryTab.svelte  IterationDashboard.svelte  IterationProgressBar.svelte  RealizationStatusTab.svelte  UpdateInfoTab.svelte
svelte_gui/src/lib/components/plotting/: DeckGLPlot.svelte  DistributionPlot.svelte  PlotContainer.svelte  SpatialContainer.svelte  TimeSeriesPlot.svelte  UPlotChart.svelte
svelte_gui/src/lib/components/plotting/engines/: DeckGLEngine.svelte  UPlotEngine.svelte
svelte_gui/src/lib/stores/: websocket.svelte.ts
svelte_gui/src/lib/utils/: formatting.ts
svelte_gui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
svelte_gui/src/routes/experiments/: +page.svelte  +page.ts
svelte_gui/src/routes/experiments/[id]/: +page.svelte  +page.ts
svelte_gui/src/routes/experiments/[id]/executions/[execution_id]/: +page.svelte  +page.ts
svelte_gui/src/routes/experiments/[id]/executions/[execution_id]/ensembles/[iter]/realizations/[real_id]/steps/[step_name]/: +page.svelte  +page.ts
svelte_gui/tests/: test.e2e.ts
tests/: conftest.py  test_api_integration.py  test_cli_integration.py  test_discovery.py  test_isolated_api.py  test_monitor_incremental.py  test_plugins.py  test_poly_localized_da.py  test_runnable.py  test_semi_realistic_da.py  test_triple_enif_da.py
tests/experiment_runner/: test_experiment_orchestrator.py  test_inject_updated_parameters.py  test_job_edge_cases.py  test_job_submitter.py  test_orchestrator_fallbacks.py  test_orchestrator_flow.py  test_pause_resume.py  test_realization_workdir_manager.py
tests/experiments/: test_models.py
tests/integration/: test_backend_live_endpoints.py  test_ert_poly_integration.py  test_scanned_experiments.py  test_ui_smoke.py
tests/plugins/: test_client.py  test_enif_architecture.py  test_enif_update.py  test_es_update.py  test_es_update_localization.py  test_spatial_localization.py  test_spatial_tapers.py
tests/plugins/snapshots/test_enif_update/test_enif_comprehensive_snapshot/: comprehensive_posterior_enif.csv
tests/plugins/snapshots/test_enif_update/test_enif_small_snapshot/: small_posterior_enif.csv
tests/plugins/snapshots/test_es_update/test_es_small_snapshot/: small_posterior_es.csv
tests/server/: test_monitoring.py  test_routes.py
tests/storage/: test_api.py  test_api_misfit.py  test_consolidation.py  test_ingestion.py  test_integration.py  test_observation_summary.py  test_query.py
tests/unit/updates/: test_spatial.py
