[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gert"
description = "Generic Ensemble Reservoir Tool - API-first orchestration engine for ensemble-based modeling."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "GERT Contributors" }
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "polars>=0.19",
    "pyarrow>=13.0",    # Required for Polars Parquet support
    "psij-python>=0.1", # HPC job submission abstraction
    "pluggy>=1.6.0",
    "textual>=0.47.0",
    "graphite_maps",
    "scikit-learn",
    "scipy",
    "numpy",
    "networkx",
    "textual-plot>=0.10.1",
    "httpx",
]

[project.scripts]
gert = "gert.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-snapshot",
    "hypothesis",
    "mypy==1.19.1",
    "pre-commit",
    "ruff==0.15.6",
    "types-psutil"
]
style = ["pre-commit"]
types = ["mypy"]

# This section configures hatch-vcs to get the version from Git
# and write it to your version file, just like setuptools_scm did.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gert/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

# The [tool.setuptools] and [tool.setuptools_scm] sections are no longer needed and should be deleted.

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=gert --cov-report=term-missing"
testpaths = ["tests"]
norecursedirs = [
    "*.egg",
    ".*",
    "snapshots",
    "baseline",
]
markers = [
    "integration_test",
    "slow",
]
log_cli = "false"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 360
session_timeout = 2400
timeout_func_only = true # Do not apply timeout to fixtures which can be slow but cached

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
# Roadmap strictly specifies selecting ALL rules for architectural integrity
select = ["ALL"]
preview = true
ignore = [
    "D",       # pydocstyle (Docstrings are handled by docs/ as prompts)
    "CPY001",  # Missing copyright on top of file
    "FA100",   # Missing `from __future__ import annotations`
    "G004",    # logging-f-string
    "PLW2901", # redefined-loop-name
    "PLR2004", # magic-value-comparison
    "PLR0915", # too-many-statements
    "PLR0912", # too-many-branches
    "PLR0911", # too-many-return-statements
    "PLC2701", # import-private-name
    "PLR0914", # too-many-locals
    "PLR6301", # no-self-use
    "PLW1641", # eq-without-hash
    "PLR0904", # too-many-public-methods
    "PLR1702", # too-many-nested-blocks
    "RUF067",  # code in __init__ files
    "RUF069",  # unreliable floating point comparison
    "DOC201",  # `return` is not documented in docstring
    "ARG002",  # unused method argument
    "TRY301",  # abstract `raise` to an inner function
]

# Allow EN DASH (U+2013)
allowed-confusables = ["–"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "ASYNC110", # It's perfectly fine to await asyncio.sleep in tests
    "E501",    # Long test lines are fine
    "S101",    # Use of assert detected (allowed in tests)
    "D",       # All pydocstyle rules (docstring conventions - tests often don't need extensive docs)
    "TC003",   # Move standard library import into a type-checking block
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`. (not needed for tests)
    "ANN001",  # Missing type annotation for function argument (test functions often don't need full annotations)
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN205",  # Missing return type annotation for staticmethod
    "ANN206",  # Missing return type annotation for classmethod
    "S106",    # Possible hardcoded password (test data often contains dummy passwords)
    "NPY002",  # Allow legacy np.random.seed for snapshots
    "ANN401",  # Allow Any type for pytest fixtures
    "ERA001",  # Commented out code (fine for test documentation)
    "F841",    # Unused local variable (fine for test setup)
    "S105",    # Possible hardcoded password (test data often contains dummy secrets)
    "S608",    # Possible SQL injection vector (tests may use raw SQL)
    "PLR2004", # Magic value used in comparison (tests often use magic numbers)
    "SLF001",  # Private member accessed (tests often need to access private members)
    "PT011",   # pytest.raises is too broad (sometimes you want to catch general exceptions in tests)
    "PT012",   # pytest.raises should contain a simple statement (sometimes complex setup is needed)
    "FBT001",  # Boolean positional arg in function definition (tests often use boolean flags)
    "FBT002",  # Boolean default positional argument in function definition
    "FBT003",  # Boolean positional argument in function call
    "ARG001",  # Unused function argument (test fixtures often go unused in some tests)
    "ARG002",  # Unused method argument
    "PLW0603", # global-statement
    "RUF029",  # unused-async
    "RUF018",  # assignment-in-assert
    "RUF006",  # asyncio-dangling-task
    "PLW1508", # Invalid type of environment variable default
    "RUF052",  # used-dummy-variable
    "RUF045",  # implicit-class-var-in-dataclass
    "ASYNC240", # blocking-path-method-in-async-function
    "T201",    # print found (allowed in tests for debugging/output)
    "N803",    # Allow uppercase variable names in tests to match math papers
]
"src/gert/__main__.py" = [
    "T201",    # print found (allowed for CLI output)
]
"examples/*" = [
    "T201",    # print found (allowed for examples)
    "INP001",  # Implicit namespace package
]
"src/gert/plugins/enif_update.py" = [
    "N806",    # Uppercase variable names allowed to match math papers
    "C901",    # perform_update complexity is fine
    "E501",    # Fine for algorithms
    "FURB118", # Fine to use lambda
    "N803",    # Allow uppercase variable names to match math papers (e.g., U, X, Y, H, d, sigma, Prec_u, Prec_eps)
]
"src/gert/updates/spatial.py" = [
    "N806",    # Allow uppercase variable names to match math/graph conventions (e.g., G for Graph)
]
[tool.ruff.lint.pylint]
max-args = 20

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
# PR 1.1: Strict mypy typing enforced
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
mypy_path = "src"


[[tool.mypy.overrides]]
module = ["tests.plugins.test_enif_architecture"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["untyped-decorator"]

# For psij (ignore missing imports)
[[tool.mypy.overrides]]
module = [
    "psij",
    "psij.*",
    "hypothesis",
    "hypothesis.*",
    "pluggy",
    "pluggy.*",
    "textual",
    "textual.*",
    "rich",
    "rich.*",
    "graphite_maps",
    "graphite_maps.*",
    "sklearn",
    "sklearn.*",
    "scipy",
    "scipy.*",
    "numpy",
    "numpy.*",
    "networkx",
    "networkx.*",
]
ignore_missing_imports = true

[tool.uv]
fork-strategy = "requires-python"
dev-dependencies = [
    "types-psutil",
]

[project.entry-points."gert"]
enif_update = "gert.plugins.registration"
